Project

General

Profile

Bug #20075

rgw: multipart copy-part encounts 404 error by using S3 java sdk

Added by 林鹏 董 almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel, kraken
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
rgw
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Testing multipart copy-part feature by using S3 java sdk(version:1.10.69) got 404 No Such Key. RGW log detail are as follow:
2017-05-05 12:42:43.958598 7f90f67fc700 20 RGWEnv::set(): HTTP_HOST: 10.xx.xx.xx:8088
2017-05-05 12:42:43.958625 7f90f67fc700 20 RGWEnv::set(): HTTP_AUTHORIZATION: AWS U3Z2BPYQ1ZL5U75YLIFR:XXXXXXhNHyQch0vgtZfpLxI=
2017-05-05 12:42:43.958631 7f90f67fc700 20 RGWEnv::set(): HTTP_X_AMZ_COPY_SOURCE_RANGE: bytes=0-5242879
2017-05-05 12:42:43.958636 7f90f67fc700 20 RGWEnv::set(): HTTP_USER_AGENT: aws-sdk-java/1.10.69 Windows_8.1/6.3 Java_HotSpot(TM)_64-Bit_Server_VM/25.51-b03/1.8.0_51
2017-05-05 12:42:43.958640 7f90f67fc700 20 RGWEnv::set(): HTTP_AMZ_SDK_INVOCATION_ID: 4f7a8505-8633-4413-999b-23bbc86189b1
2017-05-05 12:42:43.958644 7f90f67fc700 20 RGWEnv::set(): HTTP_AMZ_SDK_RETRY: 0/0/
2017-05-05 12:42:43.958648 7f90f67fc700 20 RGWEnv::set(): HTTP_X_AMZ_COPY_SOURCE: /copyPart/test-16MB.txt
2017-05-05 12:42:43.958651 7f90f67fc700 20 RGWEnv::set(): HTTP_DATE: Fri, 05 May 2017 04:42:45 GMT
2017-05-05 12:42:43.958656 7f90f67fc700 20 RGWEnv::set(): CONTENT_TYPE: application/octet-stream
2017-05-05 12:42:43.958659 7f90f67fc700 20 RGWEnv::set(): CONTENT_LENGTH: 0
2017-05-05 12:42:43.958662 7f90f67fc700 20 RGWEnv::set(): HTTP_CONNECTION: Keep-Alive
2017-05-05 12:42:43.958665 7f90f67fc700 20 RGWEnv::set(): REQUEST_METHOD: PUT
2017-05-05 12:42:43.958668 7f90f67fc700 20 RGWEnv::set(): REQUEST_URI: /testcopypart/s3sdk-copy-16MB.txt
2017-05-05 12:42:43.958672 7f90f67fc700 20 RGWEnv::set(): QUERY_STRING: uploadId=2%7EH8lLHXNkBTMzPAROzvmQ4kGilJtE9KF&partNumber=1
2017-05-05 12:42:43.958680 7f90f67fc700 20 RGWEnv::set(): REMOTE_USER:
2017-05-05 12:42:43.958682 7f90f67fc700 20 RGWEnv::set(): SCRIPT_URI: /testcopypart/s3sdk-copy-16MB.txt
2017-05-05 12:42:43.958686 7f90f67fc700 20 RGWEnv::set(): SERVER_PORT: 8088
2017-05-05 12:42:43.958687 7f90f67fc700 20 CONTENT_LENGTH=0
2017-05-05 12:42:43.958688 7f90f67fc700 20 CONTENT_TYPE=application/octet-stream
2017-05-05 12:42:43.958689 7f90f67fc700 20 HTTP_AMZ_SDK_INVOCATION_ID=4f7a8505-8633-4413-999b-23bbc86189b1
2017-05-05 12:42:43.958690 7f90f67fc700 20 HTTP_AMZ_SDK_RETRY=0/0/
2017-05-05 12:42:43.958691 7f90f67fc700 20 HTTP_AUTHORIZATION=AWS U3Z2BPYQ1ZL5U75YLIFR:GXXXXXXXnROvhNHyQch0vgtZfpLxI=
2017-05-05 12:42:43.958692 7f90f67fc700 20 HTTP_CONNECTION=Keep-Alive
2017-05-05 12:42:43.958693 7f90f67fc700 20 HTTP_DATE=Fri, 05 May 2017 04:42:45 GMT
2017-05-05 12:42:43.958694 7f90f67fc700 20 HTTP_HOST=10.xx.xx.xx:8088
2017-05-05 12:42:43.958694 7f90f67fc700 20 HTTP_USER_AGENT=aws-sdk-java/1.10.69 Windows_8.1/6.3 Java_HotSpot(TM)_64-Bit_Server_VM/25.51-b03/1.8.0_51
2017-05-05 12:42:43.958696 7f90f67fc700 20 HTTP_X_AMZ_COPY_SOURCE=/copyPart/test-16MB.txt
2017-05-05 12:42:43.958697 7f90f67fc700 20 HTTP_X_AMZ_COPY_SOURCE_RANGE=bytes=0-5242879
2017-05-05 12:42:43.958698 7f90f67fc700 20 QUERY_STRING=uploadId=2%7EH8lLHXNkBTMzPAROzvmQ4kGilJtE9KF&partNumber=1
2017-05-05 12:42:43.958698 7f90f67fc700 20 REMOTE_USER=
2017-05-05 12:42:43.958699 7f90f67fc700 20 REQUEST_METHOD=PUT
2017-05-05 12:42:43.958700 7f90f67fc700 20 REQUEST_URI=/testcopypart/s3sdk-copy-16MB.txt
2017-05-05 12:42:43.958700 7f90f67fc700 20 SCRIPT_URI=/testcopypart/s3sdk-copy-16MB.txt
2017-05-05 12:42:43.958701 7f90f67fc700 20 SERVER_PORT=8088


Related issues

Copied to rgw - Backport #20408: jewel: rgw: multipart copy-part encounts 404 error by using S3 java sdk Resolved
Copied to rgw - Backport #20409: kraken: rgw: multipart copy-part encounts 404 error by using S3 java sdk Rejected

History

#1 Updated by 林鹏 董 almost 7 years ago

Fixed:https://github.com/ceph/ceph/pull/15283

#2 Updated by Casey Bodley almost 7 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Matt Benjamin

#3 Updated by Orit Wasserman almost 7 years ago

  • Backport set to jewel, kraken

#4 Updated by Matt Benjamin almost 7 years ago

  • Status changed from Fix Under Review to Pending Backport

#5 Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20408: jewel: rgw: multipart copy-part encounts 404 error by using S3 java sdk added

#6 Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20409: kraken: rgw: multipart copy-part encounts 404 error by using S3 java sdk added

#7 Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved

Also available in: Atom PDF