rgw: multipart copy-part remove '/' for s3 java sdk request header.

Fixes: http://tracker.ceph.com/issues/20075
Signed-off-by: donglinpeng@cmss.chinamobile.com